[package]
name = "janus-runner"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["json"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
ed25519-dalek = "2.2.0"
hex = "0.4.3"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
janus-lib = { path = "../janus-lib" }
tokio = { version = "1.48.0", features = ["io-util", "macros", "rt-multi-thread", "net", "process", "signal", "time"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.18.1", features = ["v7"] }

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
