[package]
name = "strait-runner"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["json"] }
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["io-util", "macros", "rt-multi-thread", "net", "process", "time"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["v7"] }

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
